fix app launch since folders moved

--- a/src/views/index_osx.html
+++ b/src/views/index_osx.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>ColorPicker</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="./css/index_osx.css" />
+		<link rel="stylesheet" href="../css/index_osx.css" />
 		<link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	<body>
@@ -74,6 +74,6 @@
 			<div id="newBox"></div>
 		</section>
 		<section class="box"></section>
-      <script src="./js/colorpicker.js"></script>
+      <script src="../js/colorpicker.js"></script>
    </body>
 </html>
