refacto(colorpicker): new folders, add browsers like picker who can pick color from mouse

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>ColorPicker</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="../css/index_osx.css" />
-		<link rel="shortcut icon" href="favicon.ico" />
+		<link rel="stylesheet" href="css/colorpicker.css" />
+		<script defer src="js/color.class.js"></script>
+		<script defer src="js/colorpicker.class.js"></script>
 	</head>
 	<body>
 		<div class="toolbar">
@@ -74,6 +75,5 @@
 			<div id="newBox"></div>
 		</section>
 		<section class="box"></section>
-      <script src="../js/colorpicker.js"></script>
    </body>
 </html>
