feat(events): add events with ipc

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/colorpicker.css" />
 		<script defer src="js/color.class.js"></script>
 		<script defer src="js/colorpicker.class.js"></script>
+		<script defer src="js/colorpicker.events.js"></script>
 	</head>
 	<body>
 		<div class="toolbar">
