feat(app buttons): can change pos and style of app buttons, and save last color

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -12,9 +12,15 @@
 	<body>
 		<div class="toolbar">
 			<ul id="app_buttons">
-				<li id="close"><i class="fa fa-circle"></i></li>
-				<li id="minimize"><i class="fa fa-circle"></i></li>
-				<li id="maximize"><i class="fa fa-circle"></i></li>
+				<li id="close">
+					<i class="fa"></i>
+				</li>
+				<li id="minimize">
+					<i class="fa"></i>
+				</li>
+				<li id="maximize">
+					<i class="fa"></i>
+				</li>
 			</ul>
 			<ul id="tools">
 				<p id="top_button"><i class="fa fa-map-pin"></i></p>
