fix(button): fix unmaximize and fix icon on windows

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -13,13 +13,13 @@
 		<div class="toolbar">
 			<ul id="app_buttons">
 				<li id="close">
-					<i class="fa"></i>
+					<i></i>
 				</li>
 				<li id="minimize">
-					<i class="fa"></i>
+					<i></i>
 				</li>
 				<li id="maximize">
-					<i class="fa"></i>
+					<i></i>
 				</li>
 			</ul>
 			<ul id="tools">
@@ -82,7 +82,7 @@
 				<input type="text" id="hex_value" maxlength="7"/>
 				<p id="rgb_value"></p>
 			</aside>
-			<div id="settings"><i class="fas fa-cog"></i></div>
+			<div id="settings"><i class="fa fa-cog"></i></div>
 		</section>
    </body>
 </html>
