feat(opacity): add animations

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -22,6 +22,7 @@
 				<p id="tags_button" title="Open Colorbook"><i class="fa fa-bookmark"></i></p>
 				<p id="shade_button" title="Toggle Shading"><i class="fa fa-tint"></i></p>
 				<p id="random_button" title="Set random Color"><i class="fa fa-random"></i></p>
+				<p id="opacity_button" title="Toggle Opacity"><i class="fa fa-sliders"></i></p>
 			</ul>
 		</div>
 		<header>
