feat(shading): add new awesome shade of colors :D

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -26,32 +26,9 @@
 			</ul>
 		</div>
 		<header>
-			<div class="ni">
-				<aside id="ni1" data-color=""></aside>
-				<aside id="ni2" data-color=""></aside>
-				<aside id="ni3" data-color=""></aside>
-				<aside id="ni4" data-color=""></aside>
-				<aside id="ni5" data-color=""></aside>
-				<aside id="ni6" data-color=""></aside>
-				<aside id="ni7" data-color=""></aside>
-				<aside id="ni8" data-color=""></aside>
-				<aside id="ni9" data-color=""></aside>
-				<aside id="ni10" data-color=""></aside>
-				<aside id="ni11" data-color=""></aside>
-			</div>
-			<div class="nu">
-				<aside id="nu1" data-color=""></aside>
-				<aside id="nu2" data-color=""></aside>
-				<aside id="nu3" data-color=""></aside>
-				<aside id="nu4" data-color=""></aside>
-				<aside id="nu5" data-color=""></aside>
-				<aside id="nu6" data-color=""></aside>
-				<aside id="nu7" data-color=""></aside>
-				<aside id="nu8" data-color=""></aside>
-				<aside id="nu9" data-color=""></aside>
-				<aside id="nu10" data-color=""></aside>
-				<aside id="nu11" data-color=""></aside>
-			</div>
+			<div class="shades"></div>
+			<div class="tints"></div>
+			<div class="naturals"></div>
 		</header>
 		<section class="main">
 			<aside class="sliders">
