--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -90,25 +90,28 @@ a{color: inherit;text-decoration: none;}
  * HEADER CSS
  */
 header{
-   position: relative;
-   z-index: 900;
-   width: 100%;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  top: -10px;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.6s;
 }
-header .nu, header .ni{
-   display: none;
+header.shading{
+  visibility: visible;
+  opacity: 1;
+  top: 34px;
 }
-header .nu aside{
-   background: rgb(40, 40, 40);
-   flex: 1 100%;
-   height: 65px;
-   cursor: pointer;
+header .shades, header .tints, header .naturals{
+  display: flex;
 }
-header .ni aside{
-   background: rgb(70, 70, 70);
-   flex: 1 100%;
-   height: 50px;
-   cursor: pointer;
+header .shades aside, header .tints aside, header .naturals aside{
+  flex: 1 100%;
+  height: 10vmin;
+  cursor: pointer;
 }
+
 
 
 /**
