--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -18,7 +18,7 @@
 			</ul>
 			<ul id="tools">
 				<p id="top_button" title="Set always on Top"><i class="fa fa-map-pin"></i></p>
-				<p id="picker_button" title="Eyedropper"><i class="fa fa-eyedropper"></i></p>
+				<p id="picker_button" title="Pick Color"><i class="fa fa-eyedropper"></i></p>
 				<p id="tags_button" title="Open Colorbook"><i class="fa fa-bookmark"></i></p>
 				<p id="shade_button" title="Toggle Shading"><i class="fa fa-tint"></i></p>
 				<p id="random_button" title="Set random Color"><i class="fa fa-random"></i></p>
@@ -53,7 +53,7 @@
 				<input type="number" id="red_value" maxlength="3" />
 				<input type="number" id="green_value" maxlength="3" />
 				<input type="number" id="blue_value" maxlength="3" />
-				<input type="number" id="alpha_value" maxlength="3" />
+				<input type="text" id="alpha_value" maxlength="4" />
 			</aside>
 			<aside class="value">
 				<input type="text" id="hex_value" maxlength="7"/>
