--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -21,6 +21,9 @@ a{color: inherit;text-decoration: none;}
   -webkit-app-region: drag;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+.darkMode .toolbar{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
 .toolbar.setRight{
   flex-direction: row-reverse;
   justify-content: space-between;
@@ -69,8 +72,8 @@ a{color: inherit;text-decoration: none;}
         .windows #close{ color: rgba(0, 0, 0, 0.35); }
       #close:hover{ color: #FC4B43; }
         .windows #close:hover{ color: rgba(0, 0, 0, 0.5); }
-    .toolbar p{
-      color: rgba(0, 0, 0, 0.35);
+    #tools p{
+      color: rgba(0, 0, 0, 0.30);
       font-weight: bold;
       padding: 0 5px 0 5px;
       width: 17px;
@@ -79,9 +82,14 @@ a{color: inherit;text-decoration: none;}
       cursor: pointer;
       transition: 0.3s;
     }
-    .toolbar p:hover{ color: rgba(0, 0, 0, 0.4); }
-    .toolbar p.active{ color: rgba(0, 0, 0, 0.55); }
-    .toolbar::selection, .toolbar p::selection, .toolbar li::selection, .toolbar div::selection{
+    .darkMode #tools p{
+      color: rgba(255, 255, 255, 0.50);
+    }
+    #tools p:hover{ color: rgba(0, 0, 0, 0.45); }
+    .darkMode #tools p:hover{ color: rgba(255, 255, 255, 0.60); }
+    #tools p.active{ color: rgba(0, 0, 0, 0.60); }
+    .darkMode #tools p.active{ color: rgba(255, 255, 255, 0.85); }
+    #tools::selection, #tools p::selection, #tools li::selection, #tools div::selection{
       background: rgba(0, 0, 0, 0);
     }
 
@@ -119,7 +127,6 @@ header .shades aside, header .tints aside, header .naturals aside{
  */
 .main{
    position: absolute;
-   z-index: 200;
    bottom: 0; left: 0;
    padding-top: 15px;
    padding-bottom: 3px;
@@ -164,15 +171,12 @@ input[type=range]{
 }
 input[type=range]::-webkit-slider-thumb {
    position: relative;
-   z-index: 100;
+   z-index: 100; bottom: 10px;
    -webkit-appearance: none;
-   border: none;
-   height: 22px;
-   width: 22px;
+   height: 22px; width: 22px;
    border-radius: 50%;
-   background: white;
+   background: #FFFFFF;
    border-bottom: 2px solid #F3F3F3;
-   margin-top: -10px;
    cursor: pointer;
 }
 
@@ -180,7 +184,7 @@ progress[value]::-webkit-progress-bar {
    position: absolute;
    width: 99%;
    top: 5px; left: 1px;
-   background-color: white;
+   background-color: rgba(255, 255, 255, 0.9);
    border-radius: 6px;
    height: 10px;
 }
@@ -216,9 +220,9 @@ progress{
    }
 
    .inputs input[type="number"], input[type="text"]{
-      width: 30px;
+      width: 40px;
       text-align: center;
-      background: rgba(0, 0, 0, 0.1);
+      background: rgba(0, 0, 0, 0.08);
       color: rgba(0, 0, 0, 0.5);
       border: none;
       padding: 2px;
@@ -228,9 +232,9 @@ progress{
       outline: none;
       transition: 0.3s;
    }
-   .whited .inputs input[type="number"], .whited input[type="text"], .whited .value p{
-      background: rgba(255, 255, 255, 0.1);
-      color: rgba(255, 255, 255, 0.5);
+   .darkMode .inputs input[type="number"], .darkMode input[type="text"], .darkMode .value p{
+      background: rgba(255, 255, 255, 0.08);
+      color: rgba(255, 255, 255, 0.8);
    }
 
    .value{
