feat(contextualMenu): add the new contexteMenu first try

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -5,11 +5,13 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="css/colorpicker.css" />
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<script defer src="js/util.class.js"></script>
 		<script defer src="js/color.class.js"></script>
 		<script defer src="js/colorpicker.class.js"></script>
 		<script defer src="js/colorpicker.events.js"></script>
 	</head>
 	<body>
+		<div id="contextMenu"></div>
 		<div class="toolbar">
 			<ul id="app_buttons">
 				<li id="close"><i></i></li>
