--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -246,6 +246,17 @@ progress{
       width: 105px;
    }
 
+#contextMenu {
+  display: none;
+  position: absolute;
+  top: 0; left: 0;
+  z-index: 3000;
+  background: rgba(0, 0, 0, 0.4);
+}
+.darkMode #contextMenu {
+  background: rgba(255, 255, 255, 0.4);
+}
+
 #settings{
   position: absolute;
   bottom: 7px; right: 19px;
