--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -246,16 +246,25 @@ progress{
       width: 105px;
    }
 
-#contextMenu {
+#contextMenu{
   display: none;
   position: absolute;
   top: 0; left: 0;
   z-index: 3000;
+  padding: 10px;
   background: rgba(0, 0, 0, 0.4);
 }
-.darkMode #contextMenu {
+.darkMode #contextMenu{
   background: rgba(255, 255, 255, 0.4);
 }
+  #contextMenu li{
+    list-style: none;
+    padding: 3px 2px;
+  }
+  #contextMenu .separator{
+    padding: 0; margin: 4px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  }
 
 #settings{
   position: absolute;
