--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>ColorPicker</title>
+		<title>Colorpicker</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="css/colorpicker.css" />
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
