--- a/src/views/picker.html
+++ b/src/views/picker.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ColorPicker</title>
+    <title>Picker</title>
     <link rel="stylesheet" href="css/picker.css" />
     <script defer src="js/picker.js"></script>
   </head>
