--- a/src/views/css/about.css
+++ b/src/views/css/about.css
@@ -10,7 +10,7 @@ body, p, h1, h2, input{
 }
 
 body{
-  background: rgba(255, 255, 255, 0.9);
+  background: rgb(255, 255, 255);
   text-align: center;
 }
 
