fix(update): get release info from server

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -11,8 +11,8 @@
     <img src="../../build/logo.png" alt="Logo Colorpicker" />
     <h1>Colorpicker</h1>
     <section>
-      <p id="version">Release <span>2.0.0</span></p>
-      <p id="update"><span id="gray"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i> Checking for new update...</span></p>
+      <p id="version">Release <span>{...}</span></p>
+      <p id="update"><i class="fa fa-refresh fa-spin fa-3x fa-fw"></i> Checking for new update...</p>
     </section>
     <p id="thanks">Thank's to Ryunako &amp; Hanabi!</p>
   </body>
